fix: Fix modal text overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,21 +66,23 @@
 }
 
 @layer base {
-	body::-webkit-scrollbar {
-		width: 8px;
-	}
+	.scrollbar-custom {
+		&::-webkit-scrollbar {
+			width: 8px;
+		}
 
-	body::-webkit-scrollbar-track {
-		background: hsl(var(--secondary));
-	}
+		&::-webkit-scrollbar-track {
+			background: hsl(var(--secondary));
+		}
 
-	body::-webkit-scrollbar-thumb {
-		background: hsl(var(--secondary-foreground) / 0.2);
-	}
+		&::-webkit-scrollbar-thumb {
+			background: hsl(var(--secondary-foreground) / 0.2);
+		}
 
-	@media (max-width: 380px) {
-		body::-webkit-scrollbar {
-			display: none;
+		@media (max-width: 380px) {
+			&::-webkit-scrollbar {
+				display: none;
+			}
 		}
 	}
 }
